Simplify/remove reflection