@@ -5,7 +5,7 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.JsonArray;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
@@ -33,7 +33,7 @@ public final class UpdateChecker {
 
     public void checkVersion() {
         final JsonArray result;
-        try (final InputStreamReader urlReader = new InputStreamReader(new URL("https://api.github.com/repos/" + this.githubRepo + "/releases").openStream(), StandardCharsets.UTF_8)) {
+        try (final InputStreamReader urlReader = new InputStreamReader(URI.create("https://api.github.com/repos/" + this.githubRepo + "/releases").toURL().openStream(), StandardCharsets.UTF_8)) {
             result = GSON.fromJson(urlReader, JsonArray.class);
         } catch (IOException exception) {
             this.plugin.getLogger().log(Level.INFO, "Failed to look for updates", exception);
